# plan-up

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  board-card-variations.html  design-system.md  design.md  font-comparison-demo.html  nav-apple-style-demo.html  nav-material3-demo.html  nav-redesign-mockup.html  package-lock.json
.github/workflows/: release.yml
app/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.api.json  tsconfig.node.json  vercel.json  vite.config.ts
app/api/: _kv.ts  ping.ts
app/scripts/: make-tauri-icon.mjs
app/server/: openai-gateway.mjs  planup-mcp.mjs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
design-docs/: README.md  ai-chat.md  app-icon-and-favicon.md  app-shell-and-navigation.md  auto-backup.md  backlog.md  board-view.md  brand-theme.md  collections.md  conflict-warning.md  copy-to-telegram.md  dark-mode.md  data-model.md  date-picker.md  dependencies.md  desktop-app-tauri.md  desktop-auto-update.md  export-png.md  gantt-view.md  home-dashboard.md  hosted-share-link.md  liquid-glass-material.md  list-view.md  member-avatars.md  member-header-summary.md  member-lane-order.md  member-title.md  members-and-days-off.md  milestones.md  persistence-and-backup.md  project-export-import.md  project-icon-emoji.md  project-member-settings.md  projects.md  restore-versions.md  scheduling.md  search-and-keyboard.md  server-handoff.md  share-link-snapshot.md  sprint-activity-log.md  (+10 more)
(+104 files in other folders)
