[package]
name = "plan-up"
version = "0.0.0"
description = "plan-up — single-user, local-first task & sprint planner"
edition = "2021"

[lib]
name = "plan_up_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
